# website

./: .gitignore  00-Readme 2.txt  Cargo.toml  aboutPage.html  contactPage.html  helpPage.html  p05_EncoderDrvr.html  p07_ImageSeg.html  p08_DepthPercept.html  p09_TensorFlow.html  p10_Mandelbrot.html  p11_Icosahedron.html  p13_Textures.html  p15_Smoke.html  p16_Jello.html  p17_Boltz.html  run.sh  style.css
crates/andy_http_server/: Cargo.toml
crates/andy_http_server/src/: main.rs
crates/andy_webgl_utils/: Cargo.toml
crates/andy_webgl_utils/src/: lib.rs
crates/andys_webgl_main/: Cargo.toml
crates/icosahedron/: Cargo.toml
crates/navier_stokes/: Cargo.toml
crates/navier_stokes/src/: lib.rs
crates/navier_stokes/src/shaders_source/: frag.glsl
crates/static_site_generator/: Cargo.toml
crates/wasm_test/: Cargo.toml
crates/wasm_test/src/: lib.rs
crates/wasm_test/src/icosahedron/: mod.rs
crates/wasm_test/src/shaders_source/: frag.glsl  vertex.glsl
imgs/: mono-vs-poly.jpg.trash
imgs/led/: cut.sh
old_src/: MakeAll 2.php  MakeAll.php 2.bad  MakeThumbPages.php  aboutPage 2.php  contactPage 2.php  helpPage.php  index 2.php  library.php  o  p05_EncoderDrvr.php  p06_GCode.php  p07_ImageSeg.php  p09_TensorFlow.php  p10_Mandelbrot.php  p11_Icosahedron.php  p15_Smoke.php  p16_Jello.php  p19_NavierStokes.php  p21_IMF.php  phpInfo 2.php  thumb  thumb.html  thumbs.html
old_src/code/: c02_001_PWM.cpp  c02_003_Makefile.txt  c06_002_GCode.cpp  c11_beachBall.001.frag  c11_beachBall.003.frag  c13_002_MonaLisa.frag  c13_002_MonaLisa_Shader.frag  c15_003_Smoke.frag
old_src/postscript/: GoldenRectangle.ps  RPi2L298.ps
root_server/: home_page.css  index.html  main.js  menuPage.html  p00_None.html  p01_Capstone.html  p02_PWM.html  p03_PhoneCtrl.html  p04_MotorPWM.html  p06_GCode.html  p12_Shadows.html  p14_Earth.html  p18_Marbles.html  p19_NavierStokes.html  p20_2Body.html  p21_IMF.html  p22_STL.html  size400.html
root_server/icosahedron/: icosahedron.html
root_server/imgs/: PWM-Circuit.png.preCrush  seedlings_examples.png.trash
root_server/textures/: buttonPanel.old.pgm
root_server/thumb/: thumb_01.html  thumb_03.html  thumb_04.html  thumb_06.html  thumb_10.html  thumb_12.html  thumb_14.html  thumb_17.html  thumb_24.html
root_server/thumb 2/: thumb_05.html  thumb_08.html  thumb_15.html  thumb_18.html  thumb_19.html  thumb_21.html  thumb_22.html
server_frontend/: Cargo.toml
site_src/: config.json
src/: MakePages.php  go.sh  menuContent 2.php  menuPage.php  out.html  out.sh  p00_None.php  p01_Capstone.php  p02_PWM.php  p03_PhoneCtrl.php  p04_MotorPWM.php  p08_DepthPercept.php  p12_Shadows.php  p13_Textures.php  p14_Earth.php  p17_Boltz.php  p18_Marbles.php  p20_2Body.php  p22_STL 2.php  seedlings 2
textures/: buttonPanel.pgm
thumb/: thumb_00.html  thumb_09.html  thumb_13.html  thumb_23.html
thumb 2/: thumb_02.html  thumb_07.html  thumb_11.html  thumb_16.html  thumb_20.html
wasm/: buttons.js
wasm 2/: readfile.js  readfile.js.trash
wasm.hard/: index.wasm  readfile.js
(+57 files in other folders)
