[package]
name = "andy_http_server"
version = "0.1.0"
edition = "2021"
authors = ["陈功 <chengong456@qq.com>"]

[dependencies]
hyper = "1.0.1" 
hyper-util = { version = "0.1.1", features = ["full"] }
http-body-util =  "0.1.0"
tokio = { version = "1.35.0", features = ["full"] }
thiserror = "1.0.50"
clap = { version = "4.4.11", features = ["derive"] }


