[package]
name = "wasm_test"
version = "0.1.0"
edition = "2021"
authors = ["陈功 <chengong456@qq.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
serde = { version = "1.0.183", features = ["derive"] }
base64 = "0.21.2"
serde-wasm-bindgen = "0.5.0"
serde_json = "1.0.104"
js-sys = "0.3.64"
console_error_panic_hook = "0.1.7"

[dependencies.web-sys]
version = "0.3.64"
features = [
  "console",
  'Window',
  'Document',
  'Element',
  'HtmlElement',
  'HtmlCanvasElement',
  'WebGlRenderingContext'
]
