[package]
name = "wasm_test"
version = "0.1.0"
edition = "2021"
authors = ["陈功 <chengong456@qq.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
js-sys = "0.3.66"
console_error_panic_hook = "0.1.7"
cgmath = "0.18.0"

[dependencies.web-sys]
version = "0.3.66"
features = [
  "console",
  'Window',
  'Document',
  'Element',
  'HtmlElement',
  'HtmlCanvasElement',
  'WebGl2RenderingContext',
  'WebGlBuffer',
  'WebGlShader',
  'WebGlProgram',
  'WebGlVertexArrayObject',
  'WebGlUniformLocation'
]
